新增功能： 设置logo透明化 设置主窗口鼠标拖拽

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
             <version>${javafx.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.kordamp.bootstrapfx</groupId>
+            <artifactId>bootstrapfx-core</artifactId>
+            <version>0.4.0</version>
+        </dependency>
+        <dependency>
             <groupId>com.github.oshi</groupId>
             <artifactId>oshi-core</artifactId>
             <version>5.3.7</version>
