新增功能： 布局可配置，横向和纵向布局，默认横向布局

--- a/config/config.properties
+++ b/config/config.properties
@@ -1,7 +1,8 @@
 #
-#Sat Jan 02 01:43:54 CST 2021
+#Sat Jan 02 16:34:46 CST 2021
 theme-color=
 logo-url=
 scene-y=
 scene-x=
 logo-opacity=
+layout-type=0
