--- a/config/config.properties
+++ b/config/config.properties
@@ -1,8 +1,8 @@
 #
-#Sat Jan 02 16:34:46 CST 2021
+#Sun Jan 03 16:55:03 CST 2021
 theme-color=
 logo-url=
 scene-y=
 scene-x=
-logo-opacity=
-layout-type=0
+logo-opacity=0.30
+layout-type=
