--- a/config/config.properties
+++ b/config/config.properties
@@ -1,8 +1,10 @@
 #
-#Sun Jan 03 16:55:03 CST 2021
+#Tue Jan 05 21:34:26 CST 2021
 theme-color=
 logo-url=
 scene-y=
 scene-x=
-logo-opacity=0.30
+animation-open=true
+logo-opacity=
 layout-type=
+clock-open=true
