--- a/config/config.properties
+++ b/config/config.properties
@@ -1,5 +1,5 @@
 #
-#Tue Jan 05 21:34:26 CST 2021
+#Wed Jan 06 15:52:29 CST 2021
 theme-color=
 logo-url=
 scene-y=
@@ -8,3 +8,4 @@ animation-open=true
 logo-opacity=
 layout-type=
 clock-open=true
+animation-type=coderain
