--- a/config/config.properties
+++ b/config/config.properties
@@ -1,11 +1,18 @@
 #
-#Wed Jan 06 15:52:29 CST 2021
+#Thu Jan 07 15:54:51 CST 2021
 theme-color=
 logo-url=
+clock-background-opacity=0.00
 scene-y=
 scene-x=
 animation-open=true
 logo-opacity=
+clock-border-color=
+clock-background=
+second-color=\#ccffff
+hour-color=\#00ffff
 layout-type=
 clock-open=true
-animation-type=coderain
+time-color=\#f2f2f2
+animation-type=
+minute-color=\#cce6ff
