--- a/config/config.properties
+++ b/config/config.properties
@@ -1,18 +1,28 @@
 #
-#Thu Jan 07 15:54:51 CST 2021
+#Fri Jan 15 15:26:24 CST 2021
 theme-color=
 logo-url=
-clock-background-opacity=0.00
+clock-background-opacity=
+animation-open=
+logo-opacity=
+clock-background=
+clock-size=
+hour-color=
+layout-type=
+clock-open=
+time-color=
+animation-type=
+clock-y=
+main-pane-display=
+coderain-text-color=
+clock-x=
 scene-y=
 scene-x=
-animation-open=true
-logo-opacity=
+ram-info-display=
+logo-display=
 clock-border-color=
-clock-background=
-second-color=\#ccffff
-hour-color=\#00ffff
-layout-type=
-clock-open=true
-time-color=\#f2f2f2
-animation-type=
-minute-color=\#cce6ff
+media-wallpaper-path=
+second-color=
+system-info-display=
+minute-color=
+cpu-info-display=
