这次改动较大 新增功能：web类型动态壁纸 修复bug：修复重新选择壁纸后所有特效窗口都打开问题

--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,11 @@
             <artifactId>javafx-media</artifactId>
             <version>${javafx.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-web</artifactId>
+            <version>${javafx.version}</version>
+        </dependency>
 <!--        <dependency>-->
 <!--            <groupId>org.kordamp.bootstrapfx</groupId>-->
 <!--            <artifactId>bootstrapfx-core</artifactId>-->
