修复空指针异常 优化部分代码

--- a/config/config.properties
+++ b/config/config.properties
@@ -1,23 +1,25 @@
 #
-#Fri Jan 15 15:26:24 CST 2021
+#Tue Jan 19 20:23:52 CST 2021
 theme-color=
 logo-url=
 clock-background-opacity=
-animation-open=
+animation-open=true
 logo-opacity=
 clock-background=
 clock-size=
 hour-color=
 layout-type=
-clock-open=
+clock-open=true
 time-color=
 animation-type=
+web-wallpaper-path=
 clock-y=
 main-pane-display=
-coderain-text-color=
+coderain-text-color=\#00ff00
 clock-x=
 scene-y=
 scene-x=
+wallpaper-type=media
 ram-info-display=
 logo-display=
 clock-border-color=
