--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,11 @@
             <artifactId>slf4j-simple</artifactId>
             <version>1.7.30</version>
         </dependency>
-
+        <dependency>
+            <groupId>uk.co.caprica</groupId>
+            <artifactId>vlcj-javafx</artifactId>
+            <version>1.0.2</version>
+        </dependency>
     </dependencies>
 
 
