--- a/config/config.properties
+++ b/config/config.properties
@@ -1,5 +1,5 @@
 #
-#Tue Jan 19 20:23:52 CST 2021
+#Sun Jan 31 19:45:54 CST 2021
 theme-color=
 logo-url=
 clock-background-opacity=
@@ -12,7 +12,8 @@ layout-type=
 clock-open=true
 time-color=
 animation-type=
-web-wallpaper-path=
+animation-fps=11.336765261257396
+web-wallpaper-path=file\:/E\:/Program%20Files/idea_project/secret-performance-desktop/wallpaper/web/default/ASCII码3d旋转.html
 clock-y=
 main-pane-display=
 coderain-text-color=\#00ff00
@@ -23,8 +24,9 @@ wallpaper-type=media
 ram-info-display=
 logo-display=
 clock-border-color=
-media-wallpaper-path=
+media-wallpaper-path=E\:\\Program Files\\secret-performance-desktop\\wallpaper\\media\\Reimu 灵梦+音乐.mp4
 second-color=
 system-info-display=
+media-wallpaper-fps=21.23676470588236
 minute-color=
 cpu-info-display=
