--- a/config/config.properties
+++ b/config/config.properties
@@ -1,5 +1,5 @@
 #
-#Sun Jan 31 19:45:54 CST 2021
+#Wed Feb 03 21:04:47 CST 2021
 theme-color=
 logo-url=
 clock-background-opacity=
@@ -24,7 +24,7 @@ wallpaper-type=media
 ram-info-display=
 logo-display=
 clock-border-color=
-media-wallpaper-path=E\:\\Program Files\\secret-performance-desktop\\wallpaper\\media\\Reimu 灵梦+音乐.mp4
+media-wallpaper-path=
 second-color=
 system-info-display=
 media-wallpaper-fps=21.23676470588236
