--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
             <artifactId>javafx-web</artifactId>
             <version>${javafx.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.jfoenix</groupId>
+            <artifactId>jfoenix</artifactId>
+            <version>9.0.10</version>
+        </dependency>
 <!--        <dependency>-->
 <!--            <groupId>org.kordamp.bootstrapfx</groupId>-->
 <!--            <artifactId>bootstrapfx-core</artifactId>-->
