--- a/config/config.properties
+++ b/config/config.properties
@@ -1,32 +1,34 @@
 #
-#Wed Feb 03 21:04:47 CST 2021
+#Thu Feb 18 17:09:34 CST 2021
 theme-color=
 logo-url=
 clock-background-opacity=
-animation-open=true
+animation-open=
 logo-opacity=
 clock-background=
 clock-size=
 hour-color=
 layout-type=
-clock-open=true
+clock-open=
 time-color=
 animation-type=
-animation-fps=11.336765261257396
-web-wallpaper-path=file\:/E\:/Program%20Files/idea_project/secret-performance-desktop/wallpaper/web/default/ASCII码3d旋转.html
+animation-fps=
+web-wallpaper-path=
 clock-y=
 main-pane-display=
-coderain-text-color=\#00ff00
+coderain-text-color=
 clock-x=
 scene-y=
 scene-x=
-wallpaper-type=media
+wallpaper-type=
+datetime-display=
 ram-info-display=
 logo-display=
 clock-border-color=
 media-wallpaper-path=
+media-wallpaper-pause=
 second-color=
 system-info-display=
-media-wallpaper-fps=21.23676470588236
+media-wallpaper-fps=
 minute-color=
 cpu-info-display=
